<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jiang</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="code">密码:</string>
    <string name="name">用户名:</string>
    <string name="edit">邮箱/手机号码:</string>
    <string name="login">登录</string>
    <string name="sign">注册</string>
    <string name="get">获取验证码</string>
    <string name="ok">确定</string>
    <string name="house">周边房屋</string>
    <string name="holder">找房主</string>
    <string name="image">图片</string>
    <string name="addimage">添加图片</string>
    <string name="word">文字说明</string>
    <string name="top">首页</string>
    <string name="found">发现</string>
    <string name="share">分享</string>
    <string name="message">消息</string>
    <string name="myself">我的</string>
    <string name="send">发送</string>
    <string name="idea">此刻心情</string>
    <string name="my">个人主页</string>
    <string name="mycollect">我的收藏</string>
    <string name="mycare">我的关注</string>
    <string name="set">设置</string>
    <string name="write">输入信息</string>
    <string name="room1">房间1</string>
    <string name="room2">房间2</string>
    <string name="room3">房间3</string>
    <string name="room4">房间4</string>
    <string name="room5">房间5</string>
    <string name="room6">房间6</string>
    <string name="room7">房间7</string>
    <string name="addroom1">房间1/地址:北京市西城区羊房胡同/刘先生123</string>
    <string name="addroom2">房间2/房主：张先生542/地址：北京市东城区景山前街</string>
    <string name="addroom3">房间3/地址：上海市徐汇区华山路849号/房东联系方式：785</string>
    <string name="addroom4">房间4/联系方式：987/地址：北京市海淀区</string>
    <string name="addroom5">房间5/房主：许先生459/地址：北京市崇文区</string>
    <string name="addroom6">房间6/房主联系方式：谭女士556/地址：南京路步行街</string>
    <string name="addroom7">房间7/地址：四川省九寨沟县境内/郑小姐885</string>
    

</resources>
