<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableRow>
        <TextView
            android:text="@string/share"
            android:layout_weight="100"
            android:gravity="center"/>
        <Button
            android:text="@string/send"
            android:layout_weight="1"/>
            
    </TableRow>
    <TableRow >
        <EditText
            android:maxLines="10"
            android:hint="@string/idea"/>
    </TableRow>
    <TableRow>
        <Button
            android:text="@string/addimage"
            android:id="@+id/sharebutton1"/>
        <Button
            android:text="@string/addimage"
            android:id="@+id/sharebutton2"/>
    </TableRow>

</TableLayout>  

